compiler/tests/ar/errors/noret_ret.salam
// لغة: العربية
// توقع: E012
لايرجع دالة مت():
    أرجع
نهاية

دالة الرئیسیة:
    مت()
نهاية
